2012-05-25  Ken Buchanan  <kenrb@chromium.org>

        Adding Ken Buchanan to committers.py
        https://bugs.webkit.org/show_bug.cgi?id=87443

        Unreviewed.

        Adding self to committers.py as a Committer.

        * Scripts/webkitpy/common/config/committers.py:

2012-05-25  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Buildfix for newer Qt5
        https://bugs.webkit.org/show_bug.cgi?id=87257

        Reviewed by Simon Hausmann.

        * MiniBrowser/qt/MiniBrowserApplication.h: QtDeclarative -> QtQml renaming.

2012-05-25  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Unreviewed fix after r118484.

        Enable CSS_EXCLUSIONS and CSS_REGIONS.
        They were enabled uncoditinally before r118484.

        * qmake/mkspecs/features/features.pri:

2012-05-24  Tim Horton  <timothy_horton@apple.com>

        Add feature defines for web-facing parts of CSS Regions and Exclusions
        https://bugs.webkit.org/show_bug.cgi?id=87442
        <rdar://problem/10887709>

        Reviewed by Dan Bernstein.

        * Scripts/webkitperl/FeatureList.pm:

2012-05-24  Hironori Bono  <hbono@chromium.org>

        Enable grammar checking on Chromium when we paste text (Take 2)
        https://bugs.webkit.org/show_bug.cgi?id=74393

        Reviewed by Ryosuke Niwa.

        This change enables grammar checking on Chromium and implements a mock grammar
        checker to fix a failing test.

        * DumpRenderTree/DumpRenderTree.gypi:
        * DumpRenderTree/chromium/MockGrammarCheck.cpp: Added.
        (MockGrammarCheck::checkGrammarOfString):
        * DumpRenderTree/chromium/MockGrammarCheck.h: Added.
        (WebKit):
        (MockGrammarCheck):
        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::finishLastTextCheck): Call MockGrammarCheck::checkGrammarOfString to check grammatical errors.

2012-05-24  Sudarsana Nagineni  <sudarsana.nagineni@linux.intel.com>
